--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.2.20",
     "aws-amplify": "^6.6.3",
+    "firebase": "^10.14.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
