--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.669.0",
     "@aws-sdk/lib-dynamodb": "^3.669.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "aws-sdk": "^2.1691.0",
     "class-variance-authority": "^0.7.0",
