--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@aws-sdk/client-dynamodb": "^3.669.0",
+    "@aws-sdk/client-s3": "^3.675.0",
     "@aws-sdk/lib-dynamodb": "^3.669.0",
+    "@aws-sdk/lib-storage": "^3.675.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
