--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "@aws-sdk/client-dynamodb": "^3.669.0",
-    "@aws-sdk/client-s3": "^3.675.0",
-    "@aws-sdk/lib-dynamodb": "^3.669.0",
-    "@aws-sdk/lib-storage": "^3.675.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "aws-sdk": "^2.1691.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.13",
     "react": "^18",
@@ -31,6 +29,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
